[package]
name = "anti-arp-spoof-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
anti-arp-spoof-common = { path = "../anti-arp-spoof-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "anti-arp-spoof"
path = "src/main.rs"
