[package]
name = "fullmrs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
fullmrs-common = { path = "../fullmrs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fullmrs"
path = "src/main.rs"
