[package]
name = "mrs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
mrs-common = { path = "../mrs-common" }
tc-egress-common = { path = "../tc-egress-common" }
network-types = "0.0.7"
memoffset = "0.9.1"

[[bin]]
name = "mrs"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
